# comisc_python

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  hello.py  pyproject.toml
src/data/interfaces/: repository.py  unit_of_work.py
src/data/services/: __init__.py  add_batch.py  allocate.py  deallocate.py
src/data/unit_of_work/: sqlalchemy_uow.py
src/domain/errors/: __init__.py  order_line_not_found.py
src/domain/models/: __init__.py  allocate.py  batch.py  deallocate.py  models.py  order.py  product.py
src/infra/database/: __init__.py  config.py  orm.py
src/infra/database/entities/: __init__.py  allocations.py  batches.py  order_lines.py  products.py
src/infra/database/repositories/: repository.py
src/main/: main.py  server.py
src/main/models/: batch.py  order_line.py
src/main/routes/: add_batch.py  allocate.py  deallocate.py  route.py
tests/: conftest.py  fake_repository.py  test_config.py
tests/domain/models/: test_allocate.py  test_batch.py  test_model.py
tests/e2e/: test_api.py
tests/infra/database/: test_orm.py
tests/infra/database/repositories/: __test_repository.py  test_repository.py
tests/integration/: fake_repository.py  test_orm.py  test_repository.py  test_uow.py  utils.py
tests/unit/: test_batch.py  test_services.py
utils/: fake_file_system.py  sync.py  test_sync.py
